[tool.poetry]
name = "toolsense"
version = "0.1.0"
description = ""
authors = ["John Beatty <john@exposit.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
openai = "^1.3.3"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
